--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,8 +6,15 @@ $color-primary: #00172d;
 $color-secondary: #02223d;
 $color-mountain-bg-1: #3a4768;
 $color-mountain-bg-2: #538daa;
+$color-textblock-bg-blur: #ffffff0d;
+
 $color-font-primary: #ffffffc1;
 
 // fonts
 
 $font-family-primary: "Raleway", sans-serif;
+
+// textblock-styles
+
+$textblock-border-radius: 0.5rem;
+$textblock-padding: 0.4rem 1rem;
