implement icons, header design update

--- a/src/scss/_now-section.scss
+++ b/src/scss/_now-section.scss
@@ -1,23 +1,25 @@
 #now-section {
   display: flex;
-  //   justify-content: end;
   width: 100%;
 }
 
 @mixin positioning-now-box {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
 
 .now-section__container {
   display: flex;
   justify-content: space-evenly;
-  gap: 1.2rem;
+  flex-wrap: wrap;
+  gap: 0.5rem;
   z-index: 1;
+  width: 80%;
 
-  margin: -1rem auto 1rem auto;
+  // background-color: $color-textblock-bg-blur;
+  margin: 0 auto 1rem auto;
   padding: $textblock-padding;
   border-radius: $textblock-border-radius;
 
