--- a/src/scss/_hourly-forecast-section.scss
+++ b/src/scss/_hourly-forecast-section.scss
@@ -1,25 +1,33 @@
+.hourly-forecast__title {
+  margin-bottom: 0.5rem;
+}
+
 .hourly-forecast__list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 0.5rem;
   max-width: 50rem;
+  margin-inline: 1rem;
 
   .hourly-forecast__list-card {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
     gap: 0.5rem;
 
-    align-items: center;
-    width: 6.5rem;
-    margin: 0.5rem;
+    width: 100%;
     padding: 0.5rem;
 
     border-radius: $textblock-border-radius;
     background-color: $color-textblock-bg-blur;
 
+    .hourly-forecast__time {
+      width: 4rem;
+    }
+
     .hourly-forecast__icon {
-      width: 3rem;
+      width: 1.8rem;
     }
   }
 }
