add sunrise/sunset section

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -14,3 +14,11 @@ body {
   font-size: 1.5rem;
   color: $color-font-primary;
 }
+
+.icon--middle {
+  width: $icon-size-middle;
+}
+
+.title--margin {
+  margin-left: 1rem;
+}
