--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -18,3 +18,8 @@ $font-family-primary: "Raleway", sans-serif;
 
 $textblock-border-radius: 0.5rem;
 $textblock-padding: 0.4rem 1rem;
+
+// icon-styles
+
+// $icon-size-small
+$icon-size-middle: 4rem;
