--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,5 +2,5 @@
 @import "base.scss";
 @import "header.scss";
 @import "now-section";
-@import "hourly-forecast-section";
+@import "forcasts";
 @import "sunrise";
