--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -21,5 +21,6 @@ $textblock-padding: 0.4rem 1rem;
 
 // icon-styles
 
-// $icon-size-small
-$icon-size-middle: 4rem;
+// $icon-size-small: 1.2rem;
+$icon-size-middle: 2rem;
+$icon-size-big: 4rem;
