--- a/src/scss/_sunrise.scss
+++ b/src/scss/_sunrise.scss
@@ -1,11 +1,10 @@
-.sunrise-sunset__container {
+.sunrise-sunset__group {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
   text-align: center;
 
-  margin: 0.5rem 1rem 1.5rem 1rem;
   padding: 1rem 0.5rem;
-  background-color: red;
   border-radius: $textblock-border-radius;
   background-color: $color-textblock-bg-blur;
 }
