add dropdown menu

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,6 +7,8 @@ $color-secondary: #02223d;
 $color-mountain-bg-1: #3a4768;
 $color-mountain-bg-2: #538daa;
 $color-textblock-bg-blur: #ffffff0d;
+$color-dropdown: #ffffff27;
+$color-dropdown-hover: #ffffff39;
 
 $color-font-primary: #ffffffc1;
 
