--- a/src/scss/_now-section.scss
+++ b/src/scss/_now-section.scss
@@ -1,5 +1,4 @@
 #now-section {
-  // display: none;
   width: 100%;
 }
 
@@ -8,6 +7,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.now-section__weather-description {
+  margin: 1rem;
+  text-align: center;
+  font-size: 1.2rem;
 }
 
 .now-section__container {
