add hourly forecast

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -5,6 +5,7 @@
     width: 100%;
     padding-bottom: 67%;
 
+    // background-image: url("./../img/header__bg-sunrise_01-675x450.png");
     background-image: url("./../img/header.svg");
     background-size: cover;
   }
