--- a/src/scss/_media-queries.scss
+++ b/src/scss/_media-queries.scss
@@ -11,6 +11,7 @@
       padding-bottom: 48%;
 
       background-image: url("./../img/header_1200x580.svg");
+      // background-image: url("./../img/header__bg-sunrise_01-1200x580.png");
       background-size: cover;
     }
   }
