--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -26,3 +26,7 @@ $textblock-padding: 0.4rem 1rem;
 // $icon-size-small: 1.2rem;
 $icon-size-middle: 2rem;
 $icon-size-big: 4rem;
+
+// farbcodes themes
+
+$color-theme-sunrise_01: #282623;
