--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -28,3 +28,13 @@ body {
   width: 100%;
   margin-bottom: 1rem;
 }
+
+.block--alignment {
+  display: flex;
+  justify-content: center;
+}
+
+.block__container {
+  margin: 1rem 1rem 1.5rem 1rem;
+  width: 100%;
+}
