--- a/src/scss/_forcasts.scss
+++ b/src/scss/_forcasts.scss
@@ -1,13 +1,3 @@
-.block--alignment {
-  display: flex;
-  justify-content: center;
-}
-
-.block__container {
-  width: 100%;
-  margin: 0 1rem 1.5rem 1rem;
-}
-
 .informations__container {
   display: flex;
   justify-content: center;
@@ -23,7 +13,7 @@
 
   .forecast__list-card {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     gap: 0.5rem;
     width: 100%;
@@ -32,7 +22,7 @@
     .forecast__time {
       min-width: 4.5rem;
       overflow-wrap: break-word;
-      width: 25%;
+      width: 20%;
     }
 
     .forecast__icon {
