--- a/src/scss/_media-queries.scss
+++ b/src/scss/_media-queries.scss
@@ -1,8 +1,24 @@
-@media only screen and (min-width: 670px) {
+@media only screen and (min-width: 550px) {
+  .informations__container {
+    width: 18%;
+  }
+
+  .forecast__list {
+    .forecast__list-card {
+      justify-content: center;
+      .forecast__time {
+        width: 18%;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 750px) {
   .weatherdata__container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
   }
 
   .header__container {
@@ -16,11 +32,18 @@
     }
   }
 
+  #now-section {
+    height: 20rem;
+  }
+
   .now-section__container {
-    height: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    gap: 2rem;
+    align-items: center;
+    gap: 1rem;
+    height: 100%;
+    background-color: $color-textblock-bg-blur;
   }
 
   section {
@@ -37,6 +60,19 @@
     }
     .header__location-time {
       font-size: 1.5rem;
+    }
+  }
+
+  .informations__container {
+    width: 25%;
+  }
+
+  .forecast__list {
+    .forecast__list-card {
+      justify-content: space-between;
+      .forecast__time {
+        width: 20%;
+      }
     }
   }
 }
