--- a/src/scss/_air-pollution.scss
+++ b/src/scss/_air-pollution.scss
@@ -16,7 +16,7 @@
     margin-left: 1rem;
     padding: 0.5rem 1rem;
     border-radius: $textblock-border-radius;
-    background-color: green;
+    // background-color: green;
   }
 }
 
