--- a/src/scss/_air-pollution.scss
+++ b/src/scss/_air-pollution.scss
@@ -12,13 +12,17 @@
   margin-bottom: 1rem;
   text-align: center;
 
-  & span {
+  span {
     margin-left: 1rem;
     padding: 0.5rem 1rem;
     border-radius: $textblock-border-radius;
-    // background-color: green;
   }
 }
+
+// .air-pollution {
+//   &__content {
+
+//   }
 
 .air-pollution__details {
   display: flex;
