--- a/src/scss/_dropdown.scss
+++ b/src/scss/_dropdown.scss
@@ -1,7 +1,7 @@
 .drop-down {
-  position: fixed;
+  position: absolute;
   width: 100%;
-  top: -10rem;
+  top: -40rem;
   padding: 2rem 0 1rem 0;
 
   background-color: #ffffff39;
