--- a/src/scss/_dropdown.scss
+++ b/src/scss/_dropdown.scss
@@ -109,5 +109,9 @@ hr {
     height: 3.5rem;
     border: 3px solid $color-primary;
     border-radius: $textblock-border-radius;
+
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
   }
 }
