--- a/src/scss/_dropdown.scss
+++ b/src/scss/_dropdown.scss
@@ -99,11 +99,12 @@ hr {
   // height: auto;
 
   &-theme {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    color: $color-dropdown-hover;
+    color: $color-font-primary;
 
     width: 47%;
     height: 3.5rem;
@@ -113,5 +114,15 @@ hr {
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.2);
+    }
   }
 }
