adjust theme functionality

--- a/src/scss/_air-pollution.scss
+++ b/src/scss/_air-pollution.scss
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  border-radius: $textblock-border-radius;
-  background-color: $color-textblock-bg-blur;
+  // border-radius: $textblock-border-radius;
+  // background-color: $color-textblock-bg-blur;
 }
 
 .air-pollution__quality-index {
