--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -12,7 +12,7 @@ body {
 
 .icon {
   font-size: 1.2rem;
-  color: $color-font-primary;
+  // color: $color-font-primary;
 }
 
 .icon--middle {
@@ -37,4 +37,9 @@ body {
 .block__container {
   margin: 1rem 1rem 1.5rem 1rem;
   width: 100%;
+}
+
+.modul--blur {
+  border-radius: $textblock-border-radius;
+  background-color: $color-textblock-bg-blur;
 }
