--- a/src/scss/_sunrise.scss
+++ b/src/scss/_sunrise.scss
@@ -9,6 +9,6 @@
   text-align: center;
 
   padding: 1rem 0.5rem;
-  border-radius: $textblock-border-radius;
-  background-color: $color-textblock-bg-blur;
+  // border-radius: $textblock-border-radius;
+  // background-color: $color-textblock-bg-blur;
 }
