--- a/src/scss/_dropdown.scss
+++ b/src/scss/_dropdown.scss
@@ -1,15 +1,23 @@
 .drop-down {
   position: absolute;
   width: 100%;
-  top: -60rem;
+  top: -110%;
   padding: 2rem 0 1rem 0;
+  z-index: 10;
 
   background-color: #ffffff39;
   backdrop-filter: blur(15px);
   transition: all 0.5s;
+
+  &__themes {
+    position: relative;
+    margin-bottom: 2rem;
+    width: 100%;
+  }
 }
 
 .drop-down__container {
+  height: 100%;
   margin: 0 1rem;
 
   .search__container {
@@ -49,7 +57,6 @@
 
 .drop-down__list {
   list-style: none;
-  cursor: pointer;
 
   &-entry {
     margin-block: 0.3rem;
@@ -57,6 +64,7 @@
     padding: 1rem;
     transition: all 0.2s;
     background-color: $color-primary;
+    cursor: pointer;
 
     &:last-child {
       margin-bottom: 1rem;
@@ -69,6 +77,10 @@
 }
 
 .drop-down__close-button {
+  position: absolute;
+  bottom: 0.5rem;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -89,14 +101,16 @@ hr {
   margin-bottom: 1rem;
 }
 
-.themes__container {
+.themes__content {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
   gap: 0.5rem;
 
-  // height: auto;
+  width: 100%;
+  height: 11.5rem;
+  overflow: scroll;
 
   &-theme {
     position: relative;
@@ -106,7 +120,7 @@ hr {
 
     color: $color-font-primary;
 
-    width: 47%;
+    width: 30%;
     height: 3.5rem;
     border: 3px solid $color-primary;
     border-radius: $textblock-border-radius;
@@ -124,5 +138,27 @@ hr {
       height: 100%;
       background-color: rgba(0, 0, 0, 0.2);
     }
+  }
+
+  @keyframes shakeHand {
+    0% {
+      transform: rotate(-90deg);
+    }
+
+    50% {
+      transform: rotate(-45deg);
+    }
+
+    100% {
+      transform: rotate(-90deg);
+    }
+  }
+
+  &-scroll-finger {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+
+    animation: 2.5s infinite shakeHand;
   }
 }
