--- a/src/scss/_dropdown.scss
+++ b/src/scss/_dropdown.scss
@@ -109,8 +109,8 @@ hr {
   gap: 0.5rem;
 
   width: 100%;
-  height: 11.5rem;
-  overflow: scroll;
+  // height: 11.5rem;
+  overflow-y: auto;
 
   &-theme {
     position: relative;
