--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -15,10 +15,10 @@
     top: 0.5rem;
   }
   .header__location-city {
-    font-size: 7vw;
+    font-size: 2rem;
   }
   .header__location-time {
-    font-size: 3.5vw;
+    font-size: 1rem;
   }
 
   .header__search-bar {
